[package]
name = "google-sheets-api"
version = "0.1.0"
edition = "2021"

[dependencies]
# bitflags = { version = "*", default-features = false }
reqwest = { version = "*", default-features = false, features = [
    "default-tls",
    "json",
] }
serde = { version = "*", default-features = false, features = ["derive"] }
url = { version = "*", default-features = false }

[dev-dependencies]
tokio = { version = "*", features = ["full"] }
serde_json = { version = "*" }
